--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node lib/disablePayloadInSubscriptions.js"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "got": "^11.3.0"
   }
 }
