--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node lib/disablePayloadInSubscriptions.js"
+    "start": "node lib/subscriptionUpdater.js"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
